# KIS3_v3r3

./: .gitignore  docker-compose.yml  команды на сервере .txt
backend/: Dockerfile  config.py  database.py  main.py  models.py  promts.md  pyproject.toml
backend/auth/: jwt_auth.py  readme.md  user_CRUD.py  utils.py
backend/certs/: generate_keys.py  jwt-private.pem  jwt-public.pem
backend/content/: HTML_example.html  test_file.txt
backend/kis2/: DjangoRestAPI.py  db_test.sqlite3
backend/kis2/old_db/: db_test.sqlite3  work_with_DB.py
backend/migrations/: env.py
backend/migrations/versions/: 0240ab47ace7_add_relationship_person_and_task.py  1666aaac9966_add_finance_fact.py  3598d21e418a_пересоздаём_все_миграции.py  48eba2b4dd78_person_can_be.py  55351469196c_counterparty.py  6f3acd059e6e_add_user.py  846b3b44c7df_update_order.py  b14120ca8c92_fix_uuid.py  c55ff1956abb_add_relationship_task_and_executor.py  c8af026d771b_edit_uuid.py  da2746c002ab_edit_task_executor_uuid.py  e40be29886a1_uuid_uuid.py  f57ffe7c2703_add_user_peson_relationship.py
backend/routers/: box_accountig_router.py  comments_router.py  counterparty_router.py  get_all_router.py  import_router.py  order_router.py  people_router.py  task_router.py  test_views.py  work_router.py
backend/schemas/: __init__.py  auth.py  box_accounting_schem.py  counterparty_schem.py  order_schem.py  person_schem.py  state.py  task_schem.py  timing_schem.py  user.py  work_schem.py
backend/utils/: import_data.py
backend/utils/old/: copy_data_from_KIS2_to_KIS3.py
frontend/: .env.production  Dockerfile  (+5 more)
(+90 files in other folders)
